Q4 and some cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "java.project.sourcePaths": [
         "Q5.3",
         "."
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
